<resources>
    <string name="app_name">Nursing Pathways</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register For Classes</string>
    <string name="title_activity_first_open_screen">FirstOpenScreen</string>
    <string name="title_activity_path_way_display">PathWayDisplay</string>
    <string name="title_activity_set_up">Set Up</string>
    <string name="btnRegisterComplete">Done</string>
    <string name="title_activity_register_denied">We are sorry you are having difficulties with continuing your education here at CCBC. We are committed to your success and we hope you will allow us the opportunity to serve you and help you with your needs.</string>
    <string name="registrationDeniedSympathyText_text">We hope the links here have helped you. Please feel free to contact us with the last button. </string>
    <string name="btnregDen_finAid">I need financial aid</string>
    <string name="btnregDen_childCare">I need to care for a child</string>
    <string name="btnregDen_switchMajor">I want to switch my major</string>
    <string name="btnregDen_personal">Other</string>
    <string name="select_a_pathway">Select A Pathway</string>
    <string name="below_you_will_find_the_pathways_please_click_the_pathway_you_are_on">Below you will find the pathways, please click the pathway you are on.</string>
    <string name="pathwayGraphic">CCBC Pathway graphic</string>
    <string name="courseNoPrereq">No prerequisites</string>
    <string name="coursePrereq">The prerequisite is %1$s.</string>
    <string name="courseComplete">You have completed this course.</string>
    <string name="courseInProg">You are currently taking this course.</string>
    <string name="courseRequired">This is a required course for your path.</string>
    <string name="help">Help With Colors</string>
    <string name="realHelp">Help With School</string>
    <string name="heres_what_the_colors_mean">Here\'s what the colors mean</string>
    <string name="welcome_back_to_the_pathways_application">Welcome back to the Pathways Application.</string>
    <string name="delay_registration">Delay Registration</string>
    <string name="here_in_the_settings_you_can_reset_your_progress_or_modify_your_progress_as_needed">Here in the settings, you can reset your progress or modify your progress as needed.</string>
    <string name="stop_being_stupid">Stop Being Stupid</string>
    <string name="these_are_the_courses_you_are_ready_to_take_pleases_select_the_classes_you_would_like_to_register_for_now">These are the courses you are ready to take. Pleases select the classes you would like to register for now.</string>
    <string name="already_taken">Already Taken</string>
    <string name="please_select_the_courses_you_have_successfully_completed_or_that_your_adviser_has_said_will_transfer_it_is_ok_if_you_haven_apos_t_taken_all_of_the_classes_listed">Please select the courses you have successfully completed or that your adviser has said will transfer. It is ok if you haven\'t taken all of the classes listed.</string>
    <string name="quot_please_select_the_courses_you_have_successfully_completed_or_that_your_advisor_has_said_will_transfer_it_is_ok_if_you_haven_apos_t_taken_all_of_the_classes_listed">Please select the courses you have successfully completed or that your advisor has said will transfer. It is ok if you haven\'t taken all of the classes listed.</string>
    <string name="allied_health_pathway">Allied Health Pathway</string>
    <string name="welcome">Welcome!</string>
    <string name="i_need_to_email_someone">I need to email someone</string>
    <string name="it_is_time_to_register">It is time to register!</string>
    <string name="do_you_need_to_check_your_schedule_select_when_you_apos_d_like_to_be_reminded">Do you need to check your schedule? Select when you\'d like to be reminded.</string>
    <string name="it_is_time_to_check_blackboard">It is time to check Blackboard.</string>
    <string name="i_need_some_time">&#032; I need some time &#032;</string>
    <string name="reset_all_progress">Reset All Progress</string>
    <string name="taking">Taking</string>
    <string name="edit_courses_taken">Edit courses taken</string>
    <string name="able_to_take">Able to take</string>
    <string name="this_appears_to_be_the_first_time_you_have_used_this_application">This appears to be the first time you have used this application.</string>
    <string name="check_blackboard">Check Blackboard</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="edit_courses_you_are_taking">Edit courses you are taking.</string>
    <string name="not_able_to_take_yet">Not Able to Take Yet</string>
    <string name="have_you_taken_any_courses">Have you taken any courses?</string>
    <string name="two_hours">Two Hours</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="review_registration">Review Registration</string>
    <string name="i_can_apos_t_register">I can\'t register</string>
    <string name="have_you_taken_any_college_courses_previously">Have you taken any college courses previously?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="checkInProgress">Please check any in progress courses you are taking</string>
</resources>
