<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.jones.android.nursingpathways.Help">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heres_what_the_colors_mean"
        android:id="@+id/textView9"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_taken"
        android:id="@+id/purple"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_marginStart="88dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/taking"
        android:id="@+id/blue"
        android:layout_below="@+id/purple"
        android:layout_alignStart="@+id/purple" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/able_to_take"
        android:id="@+id/green"
        android:layout_below="@+id/blue"
        android:layout_alignStart="@+id/blue" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_able_to_take_yet"
        android:id="@+id/red"
        android:layout_below="@+id/green"
        android:layout_alignStart="@+id/green" />

</LinearLayout>
