<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jones.android.nursingpathways.RegistrationDenied">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_register_denied"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnregDen_childCare"
        android:id="@+id/button"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnregDen_finAid"
        android:id="@+id/button2"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnregDen_switchMajor"
        android:id="@+id/button3"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnregDen_personal"
        android:id="@+id/button4"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
