<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.jones.android.nursingpathways.Settings"
    android:background="@drawable/bg"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/here_in_the_settings_you_can_reset_your_progress_or_modify_your_progress_as_needed"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:background="@android:drawable/btn_default"
        android:textColor="#000000" />



    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_courses_taken"
        android:id="@+id/button4"
        android:layout_gravity="center_horizontal" />



    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/review_registration"
        android:id="@+id/registrationJUMP" />
</LinearLayout>
